@@ -1,5 +1,11 @@
 2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/prefdialog.{cc,h}: Remove "regexxer info" page.  Split up
+	configuration into "Look'n'feel" and "File access" pages.  Add
+	UI and class interface for the new menutool_mode config option.
+
+2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/aboutdialog.{cc,h}: New files, implementing stand-alone
 	about dialog for regexxer.
 
